src/content/docs/ja/sdk/react-native/v4/features/ad-revenue.mdx
---
title: "広告収益情報の記録"
description: "Adjust SDKを使用して、サポートされているネットワークパートナーの広告収益情報を記録します。"
slug: "en/sdk/react-native/v4/features/ad-revenue"
versions: 
    - 
        label: "v5"
        value: "v5"
        default: true
    - 
        label: "v4"
        value: "v4"
redirects: 
    v5: "/en/sdk/react-native/features/ad-revenue"
---
Adjust SDKを使用して、[サポートされているネットワークパートナー](https://help.adjust.com/en/article/ad-revenue)の広告収益を記録することができます。
<callout type="important"> 

広告収益を計測するには、Adjustの管理画面で行っていただく追加ステップがあります。担当のテクニカルアカウントマネージャーまたは[support@adjust.com](mailto:support@adjust.com)にお問い合わせください。
</Callout> 

AdjustAdRevenueオブジェクトをインスタンス化する \{\#instantiate\-an\-adjustadrevenue\-object\}
------------------------------------------------------------------------------------

<codeblock title="メソッドシグネチャー"> 

```ts
constructor(source: string)
```

</CodeBlock> 

Adjust SDKで広告収益情報を送信するには、`AdjustAdRevenue`オブジェクトをインスタンス化する必要があります。このオブジェクトには、アプリで広告収益が記録されたときにAdjustに送信される変数が含まれます。

広告収益オブジェクトをインスタンス化するには、新しい`AdjustAdRevenue`インスタンスを作成して以下のパラメーターをパスしてください：

* `source` （`string`）：広告収益のソース。利用可能なソースについては、以下の表を参照してください。

|                     パラメーター                     |        ソース        |
|------------------------------------------------|-------------------|
| `AdjustConfig.AdRevenueSourceAppLovinMAX`      | AppLovin MAX      |
| `AdjustConfig.AdRevenueSourceMopub`            | MoPub             |
| `AdjustConfig.AdRevenueSourceAdMob`            | AdMob             |
| `AdjustConfig.AdRevenueSourceIronSource`       | ironSource        |
| `AdjustConfig.AdRevenueSourceAdmost`           | Admost            |
| `AdjustConfig.AdRevenueSourceUnity`            | Unity             |
| `AdjustConfig.AdRevenueSourceHeliumChartboost` | Helium Chartboost |
| `AdjustConfig.AdRevenueSourcePublisher`        | 汎用ソース             |

```jsx
var adjustAdRevenue = new AdjustAdRevenue("source");

Adjust.trackAdRevenue(adjustAdRevenue);
```

広告収益を送信する \{\#send\-ad\-revenue\}
--------------------------------------

<codeblock title="メソッドシグネチャー"> 

```ts
trackAdRevenue: ((source: string, payload: string) => void) & ((source: AdjustAdRevenue) => void)
```

</CodeBlock> 

広告収益をAdjustに送信するには、広告収益のインスタンスを引数として`trackAdRevenue`メソッドを呼び出します。

```jsx
var adjustAdRevenue = new AdjustAdRevenue("source");

Adjust.trackAdRevenue(adjustAdRevenue);
```

広告収益額を記録する \{\#record\-ad\-revenue\-amount\}
--------------------------------------------------

<codeblock title="メソッドシグネチャー"> 

```ts
public setRevenue(revenue: number, currency: string): void
```

</CodeBlock> 

広告収益額を送信するには、`setRevenue`メソッドを呼び出し、以下の引数をパスします：

* `revenue` `number`）：収益額
* `currency` （`string`）：レポート通貨の3桁の[ISO 4217コード](https://www.iban.com/currency-codes)

<callout type="seealso"> 

詳細は、[異なる通貨での購入記録](https://help.adjust.com/en/article/currency-conversion)に関するガイドをご覧ください。
</Callout> 

```jsx
var adjustAdRevenue = new AdjustAdRevenue("source");

adjustAdRevenue.setRevenue(1.0, "EUR");

Adjust.trackAdRevenue(adjustAdRevenue);
```

広告キャンペーンの詳細を記録する \{\#record\-ad\-campaign\-details\}
----------------------------------------------------------

`AdjustAdRevenue`クラスには、広告キャンペーンのレポート作成に使用できるプロパティが含まれています。

### 広告インプレッション数 \{\#ad\-impressions\}

<codeblock title="メソッドシグネチャー"> 

```ts
public setAdImpressionsCount(adImpressionsCount: number): void
```

</CodeBlock> 

記録された広告インプレッションを送信するには、`setAdImpressionsCount`メソッドを呼び出し、以下の引数をパスします：

* `adImpressionsCount` （`number`）：広告インプレッションの数。

```jsx
var adjustAdRevenue = new AdjustAdRevenue("source");

adjustAdRevenue.setAdImpressionsCount(10);

Adjust.trackAdRevenue(adjustAdRevenue);
```

### 広告収益ネットワーク \{\#ad\-revenue\-network\}

<codeblock title="メソッドシグネチャー"> 

```ts
public setAdRevenueNetwork(adRevenueNetwork: string): void
```

</CodeBlock> 

広告収益ネットワークを送信するには、`setAdRevenueNetwork`メソッドを呼び出し、以下の引数をパスします：

* `adRevenueNetwork` （`string`）：ネットワーク名

```jsx
var adjustAdRevenue = new AdjustAdRevenue("source");

adjustAdRevenue.setAdRevenueNetwork("network1");

Adjust.trackAdRevenue(adjustAdRevenue);
```

### 広告収益ユニット \{\#ad\-revenue\-unit\}

<codeblock title="メソッドシグネチャー"> 

```ts
public setAdRevenueUnit(adRevenueUnit: string): void
```

</CodeBlock> 

広告収益ユニットを送信するには、`setAdRevenueUnit`メソッドを呼び出し、以下の引数をパスします：

* `adRevenueUnit` （`string`）：広告ユニット

```jsx
var adjustAdRevenue = new AdjustAdRevenue("source");

adjustAdRevenue.setAdRevenueUnit("unit1");

Adjust.trackAdRevenue(adjustAdRevenue);
```

### 広告収益の配置 \{\#ad\-revenue\-placement\}

<codeblock title="メソッドシグネチャー"> 

```ts
public setAdRevenuePlacement(adRevenuePlacement: string): void
```

</CodeBlock> 

`setAdRevenuePlacement`メソッドに`string`値をパスすることで、広告の配置先を記録します。

```jsx
var adjustAdRevenue = new AdjustAdRevenue("source");

adjustAdRevenue.setAdRevenuePlacement("banner");

Adjust.trackAdRevenue(adjustAdRevenue);
```

コールバックパラメーターを追加する \{\#add\-callback\-parameters\}
------------------------------------------------------

<codeblock title="メソッドシグネチャー"> 

```ts
public addCallbackParameter(key: string, value: string): void
```

</CodeBlock> 

Adjustダッシュボードで[コールバックURLを登録](https://help.adjust.com/en/article/recommended-placeholders-callbacks)した場合、SDKがイベントを記録する際にコールバックURLにGETリクエストを送信します。

コールバックパラメーターをサーバーに設定できます。イベントにパラメーターを設定すると、SDKはそれらを[コールバックURL](https://help.adjust.com/en/article/raw-data-exports)に追加します。この情報を使用して、自社のBIシステムでユーザーのアプリ内行動を分析することが可能です。

イベントにコールバックパラメーターを追加するには、`string` key\-value引数を指定して`addCallbackParameter`メソッドを呼び出してください。このメソッドを複回呼び出すことで、複数のパラメーターを追加することができます。

Adjust SDKはイベントを計測し、コールバックパラメーターが追加されたURLにリクエストを送信します。例えば、URL `https://www.mydomain.com/callback`が登録されている場合、コールバックは以下のようになります：
<codeblock highlight="key=value, foo=bar"> 

```http
https://www.mydomain.com/callback?key=value&foo=bar
```

</CodeBlock> <callout type="note"> 

Adjustは、カスタムコールバックパラメーターを保存しません。カスタムパラメーターは、コールバックURLにのみ追加されます。
</Callout> 

CSVレポートを使用している場合、CSVの定義欄にパラメーターを追加するようにしてください。

Adjustでは、SDKからURLに情報をパスするための様々なプレースホルダーをサポートしています。例えば、iOSの`{idfa}`プレースホルダーやAndroidの`{gps_adid}`プレースホルダーなどです。`{publisher_parameter}`プレースホルダーは、単一の文字列での全てのコールバックパラメーターを表示します。
<callout type="seealso"> 

使用可能な値の全リストを含むURLコールバックの詳細については、[コールバックガイド](https://help.adjust.com/en/article/callbacks)をご覧ください。
</Callout> 

```jsx
var adjustAdRevenue = new AdjustAdRevenue("source");

adjustAdRevenue.addCallbackParameter("key", "value");

Adjust.trackAdRevenue(adjustAdRevenue);
```

パートナーパラメーターを追加する \{\#add\-partner\-parameters\}
----------------------------------------------------

<codeblock title="メソッドシグネチャー"> 

```ts
public addPartnerParameter(key: string, value: string): void
```

</CodeBlock> 

[パートナーパラメーター](https://help.adjust.com/en/article/data-sharing-ad-network#map-parameters)を追加することで、ネットワークパートナーに追加情報を送信することができます。

Adjustは、設定した[外部パートナー](https://help.adjust.com/en/article/integrated-partners)にパートナーパラメーターを送信します。この情報は、より詳細な分析やリターゲティング施策にご利用いただけます。パートナー用にパラメーターの設定が完了し、機能が有効化されると、Adjustのサーバーはデータ転送を開始します。

イベントにパートナーパラメーターを追加するには、`string` key\-value引数を指定して`addPartnerParameter`メソッドを呼び出してください。このメソッドを複回呼び出すことで、複数のパラメーターを追加することができます。

```jsx
var adjustAdRevenue = new AdjustAdRevenue("source");

adjustAdRevenue.addPartnerParameter("key", "value");

Adjust.trackAdRevenue(adjustAdRevenue);
```

例 \{\#example\}
------------------

この例では、以下のプロパティを含む広告収益オブジェクトを設定し、記録する方法を示しています：

* 収益ソースをAppLovin MAXとする
* 収益額を1 Euroとする
* 10広告インプレッション数
* 広告収益ネットワークを *`"network1"`* とする
* 広告収益ユニットを *`"unit1"`* とする
* 広告収益の配置を *`"banner"`* とする
* コールバックパラメーター： `"key1" = "value1"`
* パートナーパラメーター： `"key2" = "value2"`

```jsx
var adjustAdRevenue = new AdjustAdRevenue(
   AdjustConfig.AdRevenueSourceAppLovinMAX,
);
adjustAdRevenue.setRevenue(1.0, "EUR");
adjustAdRevenue.setAdImpressionsCount(10);
adjustAdRevenue.setAdRevenueNetwork("network1");
adjustAdRevenue.setAdRevenueUnit("unit1");
adjustAdRevenue.setAdRevenuePlacement("banner");
adjustAdRevenue.addCallbackParameter("key1", "value1");
adjustAdRevenue.addPartnerParameter("key2", "value2");
Adjust.trackAdRevenue(adjustAdRevenue);
```

